Allow animated suffixes